# Baeta-Compiler

./: Baeta-Compiler.cabal  README.md  example.bae  fib.bae  stack.yaml
app/: Main.hs
src/: Closure.hs  Compile.hs  Evaluation.hs  ExceptionHandling.hs  Interpreter.hs  LambdaCalculus.hs  ModuleSystem.hs  Parser.hs  Repl.hs  STDLib.hs  TypeInference.hs
src/Compiler/: Compile.hs
src/Parser/: Base.hs  Build.hs
src/TypeInference/: Base.hs  Rules.hs  TypeVariable.hs
test/: Spec.hs
