name:                Baeta-Compiler
version:             0.1.0.0
synopsis:            Projet pour automne 2016
description:         Compilateur pour un langage fonctionnel typé
homepage:            https://github.com/bruno-cadorette/Baeta-Compiler#readme
license:             BSD3
license-file:        LICENSE
author:              Bruno Cadorette
maintainer:          Bruno.Cadorette@usherbrooke.ca
copyright:           2016 Bruno Cadorette
category:            Compiler
build-type:          Simple
-- | extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser.Base, 
                       Parser.Build, 
                       TypeInference.Base, 
                       TypeInference.Rules, 
                       TypeInference.TypeVariable, 
                       LambdaCalculus, 
                       Parser, 
                       TypeInference,
                       ModuleSystem,
                       Closure,
                       STDLib,
                       ExceptionHandling,
                       Interpreter,
                       Compile
                       
                       
                    
  build-depends:       base >= 4.7 && < 5,
                       megaparsec,
                       containers,
                       mtl,
                       transformers,
                       ansi-wl-pprint,
                       directory-tree,
                       monad-logger
                       
  default-language:    Haskell2010

executable Baeta-Compiler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , Baeta-Compiler
                     , ansi-wl-pprint
                     , transformers
  default-language:    Haskell2010

test-suite Baeta-Compiler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Baeta-Compiler
                     , hspec
                     , transformers
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bruno-cadorette/Baeta-Compiler
